# price_parser

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FILTERS.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  TASK.md  criteria.json  pyproject.toml
config/: config.yaml
docs/: CHANGELOG.md  CONFIG.md  LEGAL_ETIQUETTE.md  RUNBOOK.md  SOURCES.md
src/porsche_monitor/: __init__.py  cli.py  config.py  dashboard.py  filters.py  notify.py  report.py  schema.py  storage.py
src/porsche_monitor/sources/: __init__.py  autoscout24.py  base.py  mobile_de.py  porsche_de.py  porsche_finder.py
tests/: conftest.py  test_autoscout24.py  test_filters.py  test_storage.py
